# never-forget

./: CLAUDE.md  Cargo.toml  Info.plist  README.md  build.rs  bundle.sh  release.sh
.github/workflows/: build.yml  release.yml
src/: app.rs  blur.rs  main.rs  meeting_url.rs  notifications.rs  overlay.rs  settings.rs  tray.rs
src/calendar/: eventkit.rs  mod.rs  sync.rs
src/db/: mod.rs  queries.rs  schema.rs
